; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_cpufreq-pxa2xx.c_init_sdram_rows.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_cpufreq-pxa2xx.c_init_sdram_rows.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MDCNFG = common dso_local global i32 0, align 4
@MDCNFG_DE2 = common dso_local global i32 0, align 4
@MDCNFG_DE3 = common dso_local global i32 0, align 4
@MDCNFG_DE0 = common dso_local global i32 0, align 4
@MDCNFG_DE1 = common dso_local global i32 0, align 4
@sdram_rows = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_sdram_rows to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_sdram_rows() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @MDCNFG, align 4
  store i32 %4, i32* %1, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @MDCNFG_DE2, align 4
  %7 = load i32, i32* @MDCNFG_DE3, align 4
  %8 = or i32 %6, %7
  %9 = and i32 %5, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %0
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @MDCNFG_DRAC2(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %0
  %15 = load i32, i32* %1, align 4
  %16 = load i32, i32* @MDCNFG_DE0, align 4
  %17 = load i32, i32* @MDCNFG_DE1, align 4
  %18 = or i32 %16, %17
  %19 = and i32 %15, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %14
  %22 = load i32, i32* %1, align 4
  %23 = call i32 @MDCNFG_DRAC0(i32 %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %21, %14
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @max(i32 %25, i32 %26)
  %28 = add nsw i32 11, %27
  %29 = shl i32 1, %28
  store i32 %29, i32* @sdram_rows, align 4
  ret void
}

declare dso_local i32 @MDCNFG_DRAC2(i32) #1

declare dso_local i32 @MDCNFG_DRAC0(i32) #1

declare dso_local i32 @max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
